@@ -46,6 +46,7 @@
  45. Many more editors now support the Siplet.Input pop-up box.
  46. GMCP now supports exit open/locked status
  47. Prop_LimitedEquip will now also act as Limited Get if flagged as such.
+ 48. Scriptable: FOR-NEXT can now loop over lists and MQL query object.
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
